--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -13,33 +13,30 @@ security:
       pattern: ^/login
       stateless: true
       json_login:
-        check_path: /api/login_check # or api_login_check as defined in config/routes.yaml
+        check_path: /login # or api_login_check as defined in config/routes.yaml
         success_handler: lexik_jwt_authentication.handler.authentication_success
         failure_handler: lexik_jwt_authentication.handler.authentication_failure
+
     api:
       pattern: ^/
       stateless: true
       jwt: ~
 
-    access_control:
-      - { path: ^/login, roles: PUBLIC_ACCESS }
-      - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
+  access_control:
+    - { path: ^/login, roles: "PUBLIC_ACCESS" }
+    - { path: ^/, roles: "IS_AUTHENTICATED_FULLY" }
 
-    main:
-      lazy: true
-      provider: users_in_memory
+    #   lazy: true
+    #   provider: users_in_memory
 
-      # activate different ways to authenticate
-      # https://symfony.com/doc/current/security.html#the-firewall
+    # activate different ways to authenticate
+    # https://symfony.com/doc/current/security.html#the-firewall
 
-      # https://symfony.com/doc/current/security/impersonating_user.html
-      # switch_user: true
+    # https://symfony.com/doc/current/security/impersonating_user.html
+    # switch_user: true
 
   # Easy way to control access for large sections of your site
   # Note: Only the *first* access control that matches will be used
-  access_control:
-    # - { path: ^/admin, roles: ROLE_ADMIN }
-    # - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
   security:
